# nomina

./: MANIFEST.in  README.md  pyproject.toml
nomina/: __init__.py  cli.py  nomina.py  nomina_ui.py  nominallm.py  server.py  server_claude.py  style.css
